--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,9 +1,5 @@
-// .App {
-//  .ant-layout-header{
-//    padding: 0;
-//    background-color: pink;
-//  }
-//   .ant-layout-footer {
-//     padding: 0;
-//   }
-// }
+.App {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
